--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@types/styled-components": "^5.1.26",
     "emailjs": "^4.0.2",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
